# TheRayTracerChallenge-C-

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/shared/: Canvas.cpp  Canvas.h  Color.cpp  Color.h  Environment.cpp  Environment.h  Identity.cpp  Identity.h  Intersection.cpp  Intersection.h  Intersections.cpp  Intersections.h  Matrix.cpp  Matrix.h  Object.cpp  Object.h  Output.cpp  Output.h  Point.cpp  Point.h  Position.cpp  Position.h  Projectile.cpp  Projectile.h  Ray.cpp  Ray.h  RotationX.cpp  RotationX.h  RotationY.cpp  RotationY.h  RotationZ.cpp  RotationZ.h  Scaling.cpp  Scaling.h  Shearing.cpp  Shearing.h  Sphere.cpp  Sphere.h  Translation.cpp  Translation.h  (+8 more)
test/: CMakeLists.txt  Vector.cpp  Vector.h  test_canvas.cpp  test_intersections.cpp  test_main.cpp  test_matrix.cpp  test_rays.cpp  test_spheres.cpp  test_translation.cpp  test_tuple.cpp
